# kruk_wojcik

./: .gitignore  README.md
anro-kruk_wojcik/: CMakeLists.txt  package.xml
anro-kruk_wojcik/launch/: start.launch
anro-kruk_wojcik/src/: main.py
anro2/: CMakeLists.txt
anro2/config/: urdf_data.yaml
anro2/launch/: display.launch  wiggly.launch  wiggly3.launch
anro2/src/: dh_to_urdf_converter.py
anro2/urdf/: fixed.urdf  wiggly.urdf  wiggly3.urdf
lab2/: CMakeLists.txt  package.xml
lab2/config/: urdf_data.yaml
lab2/launch/: display.launch  wiggly2.launch
lab2/src/: dh_to_urdf_converter.py  nokdl.py
lab2/urdf/: fixed.urdf  wiggly.urdf  wiggly2.urdf
lab3/: CMakeLists.txt  package.xml
lab3/config/: urdf_params.yaml
lab3/launch/: kinematic.launch  main.launch
lab3/rviz/: config.rviz
lab3/scripts/: kdl_dkin.py  nonkdl_dkin.py
lab3/urdf/: robot2.xacro
lab4/: CMakeLists.txt  package.xml
lab4/config/: urdf_params.yaml
lab4/launch/: main.launch
lab4/rviz/: config.rviz
lab4/src/: interpolation.py  jint.py  oint.py  set_robot_position.py  start_oint.py
lab4/srv/: jint.srv  oint.srv
lab5/: CMakeLists.txt  package.xml
lab5/urdf/: robot_movable.urdf
